coded all page with styles and images

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -20,9 +20,9 @@ $font-size-h3: 1.2rem;
 $font-size-p: 1rem;
 
 //
-$primary: #282F4C;
-$secondary: #1F2033;
-$third: #C46347;
+$primary: #3732F9;
+$secondary: #ffffff;
+$third: #ffff00;
 $fourth: #EFBD85;
 $fifth: #FDEDCF;
 
