--- a/src/assets/styles/pages/_homepage.scss
+++ b/src/assets/styles/pages/_homepage.scss
@@ -1,3 +1,13 @@
 .homepage {
-    background-color: $primary;
+    background: $primary url("../../images/bg.png") repeat-x ;
+    font-size: 2.2rem;
+    line-height: 2.8rem;
+    font-family: 'Source Sans Pro', sans-serif;
+
+    hr {
+        border: 0;
+        height: 3px;
+        background-image: linear-gradient(to right, transparent, #333, transparent);
+    }
 }
+
