--- a/src/assets/styles/pages/_homepage.scss
+++ b/src/assets/styles/pages/_homepage.scss
@@ -3,6 +3,7 @@
     font-size: 2.2rem;
     line-height: 2.8rem;
     font-family: 'Source Sans Pro', sans-serif;
+    z-index: 1;
 
     hr {
         border: 0;
@@ -10,4 +11,3 @@
         background-image: linear-gradient(to right, transparent, #333, transparent);
     }
 }
-
